--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +41,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   speech_to_text: ^6.3.0
   lottie: ^2.6.0
+  highlight_text: ^1.7.0
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/lotties/
+  - assets/img/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
