--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_modular: ^6.0.4+1
   flutter_bloc: ^8.1.3
+  bloc: ^8.1.1
   speech_to_text: ^6.3.0
   lottie: ^2.6.0
   highlight_text: ^1.7.0
