--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   bloc: ^8.1.1
   speech_to_text: ^6.3.0
   lottie: ^2.6.0
+  path_provider: ^2.1.1
+  flutter_sound: ^9.2.13
 
 dev_dependencies:
   flutter_test:
