--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   speech_to_text: ^6.3.0
   lottie: ^2.6.0
   path_provider: ^2.1.1
+  flutter_sound: ^9.2.13
+  permission_handler:
 
 dev_dependencies:
   flutter_test:
