--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_sound: ^9.2.13
   permission_handler:
   dio: ^5.3.3
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
